--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,14 @@ dist.jar=${dist.dir}/IPv6SubnettingTool.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.18.jar=C:\\Program Files\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.18.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}
+    ${file.reference.mysql-connector-java-8.0.18.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
